--- a/SOSANHGIA-UPDATE1/index.html
+++ b/SOSANHGIA-UPDATE1/index.html
@@ -42,9 +42,15 @@
         if($(window).scrollTop()==0)
         {
             $("#navbar").css("display", "none");
+            $("#backup-home").css("display", "none");
+
         }
         else
         {
+            if($(window).scrollTop()>300)
+            {
+                $("#backup-home").css("display", "inline");
+            }
             $("#navbar").css("display", "inline");
         }
 
@@ -78,7 +84,7 @@
 
 </div>/header -->
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="navbar">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="navbar">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="images/logo.png"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -125,6 +131,27 @@
               </button>
             </div>
           </div>
+          <ul class="home-social-list">
+            <li>
+                <a href="#"><i class="fa fa-facebook-square"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="fa fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="fa fa-youtube-play"></i></a>
+            </li>
+
+        </ul>
+        <div class="home-scrolldown">
+            <a href="#about" class="scroll-icon smoothscroll">
+                <span>Scroll Down</span>
+                <i class="icon-arrow-right" aria-hidden="true"></i>
+            </a>
+        </div>
           <div class="suggestion-wrap">
             <span>Son</span>
             <span>Che khuyết điểm</span>
@@ -245,7 +272,6 @@
 
     <!-- pricing
     ================================================== -->
-   
 
     <!-- footer
     ================================================== -->
